<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:layout_editor_absoluteY="81dp">


    <Button
        android:id="@+id/imageButton"
        android:layout_width="329dp"
        android:layout_height="wrap_content"
        android:background="@drawable/text_arrotondato"
        android:backgroundTint="@color/cardview_light_background"
        android:ems="10"
        android:textAllCaps="false"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:text="Pubblica post"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.414"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b_desc"
        app:layout_constraintVertical_bias="0.461" />

    <EditText
        android:id="@+id/Didascalia"
        android:layout_width="199dp"
        android:layout_height="114dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="Aggiungi una didascalia..."
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/horizontal"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/NomeText"
        android:layout_width="329dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:background="@drawable/text_arrotondato"

        android:backgroundTint="@color/cardview_light_background"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="Nome Foto"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.39"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nome" />

    <EditText
        android:id="@+id/b_desc"
        android:layout_width="329dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/text_arrotondato"
        android:backgroundTint="@color/cardview_light_background"
        android:ems="10"
        android:hint="Descrizione Foto"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.414"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/breve_desc" />

    <ImageView
        android:id="@+id/horizontal"
        android:layout_width="135dp"
        android:layout_height="132dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/contact1"
        android:foregroundTintMode="add"
        android:scaleType="centerCrop"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.116"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </ImageView>


    <ImageButton
        android:id="@+id/apri"
        style="?android:textAppearanceSmall"
        android:layout_width="60dp"
        android:layout_height="56dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="320dp"
        android:backgroundTint="#FFFFFF"
        android:text="Galleria"
        android:tint="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Didascalia"
        app:srcCompat="@drawable/ic_baseline_insert_photo_24" />

    <ImageButton
        android:id="@+id/take"
        style="?android:textAppearanceSmall"
        android:layout_width="60dp"
        android:layout_height="56dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        app:srcCompat="@drawable/ic_baseline_add_a_photo_24"
        android:text="Scatta"
        android:backgroundTint="#FFFFFF"
        android:tint="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Didascalia" />

    <TextView
        android:id="@+id/edit_cord"
        android:layout_width="154dp"
        android:layout_height="18dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="116dp"
        android:text="posizione"
        android:textColor="#B2000000"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b_desc" />

    <TextView
        android:id="@+id/nome"
        android:layout_width="115dp"
        android:layout_height="21dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="18dp"
        android:text="Nome"
        android:textColor="#B2000000"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/apri" />

    <TextView
        android:id="@+id/breve_desc"
        android:layout_width="231dp"
        android:layout_height="20dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="18dp"
        android:text="Breve descrizione"
        android:textColor="#B2000000"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NomeText" />

    <TextView
        android:id="@+id/text_cord"
        android:layout_width="54dp"
        android:layout_height="45dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/ic_location"
        android:backgroundTint="@color/design_default_color_primary_dark"
         android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b_desc" />

</androidx.constraintlayout.widget.ConstraintLayout>

<!--
<android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">


        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

-->